--- a/src/components/ui/cardIcon/cardIcon.module.scss
+++ b/src/components/ui/cardIcon/cardIcon.module.scss
@@ -10,3 +10,33 @@
   background-color: var(--color-dark-900);
   border-bottom: 1px solid var(--color-dark-500);
 }
+
+.cardVertical {
+  position: relative;
+
+  display: inline-flex;
+  flex-direction: column;
+  gap: 12px;
+
+  padding: 12px;
+
+  border: 1px solid var(--color-dark-500);
+  border-radius: 4px;
+
+  &::before,
+  &::after {
+    content: '';
+
+    position: absolute;
+    top: -20px;
+    left: 63px;
+
+    border: 10px solid transparent;
+    border-bottom: 10px solid var(--color-dark-500);
+  }
+
+  &::after {
+    top: -18px;
+    border-bottom: 10px solid var(--color-dark-900);
+  }
+}
