--- a/src/components/ui/user/user.module.scss
+++ b/src/components/ui/user/user.module.scss
@@ -1,19 +1,32 @@
 .user {
-  display: flex;
-  gap: 14px;
-  align-items: center;
-  background-color: var(--color-dark-900);
-
-  &__text {
+  &Name {
     width: max-content;
     border-bottom: 1px dashed white;
   }
 
-  &__imgWrapper {
+  &Info {
+    margin-right: 10px;
+  }
+
+  &Email {
+    font-size: 0.9em;
+    color: #666;
+  }
+
+  &ImgWrapper {
+    overflow: hidden;
+
     width: 36px;
     height: 36px;
+
     background-color: #1ea7fd;
     border-radius: 50%;
+  }
+
+  &Img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 }
 
@@ -22,4 +35,18 @@ p {
 }
 
 .forModal {
+  display: inline-flex;
+  flex-direction: row-reverse;
+  gap: 8px;
+  align-items: center;
+
+  padding-right: 28px;
+
+  background-color: var(--color-dark-700);
+}
+
+.forHeader {
+  display: inline-flex;
+  gap: 14px;
+  align-items: center;
 }
