--- a/src/components/ui/modal/modal.module.scss
+++ b/src/components/ui/modal/modal.module.scss
@@ -46,11 +46,13 @@
     }
 
     &::after {
-      top: -13%;
+      top: -19px;
       border-bottom: 10px solid var(--color-dark-700);
     }
 
     &Item {
+      cursor: pointer;
+
       display: inline-flex;
       gap: 6px;
 
