--- a/src/components/ui/avtar/avatar.module.scss
+++ b/src/components/ui/avtar/avatar.module.scss
@@ -1,39 +1,65 @@
-.AvatarImage {
-  cursor: pointer;
-
-  width: 100%;
-  height: 100%;
-
-  object-fit: cover;
-  border-radius: inherit;
-}
-
-.AvatarRoot {
-  overflow: hidden;
+.Avatar {
   display: inline-flex;
+  flex-direction: row-reverse;
+  gap: 14px;
   align-items: center;
-  justify-content: center;
 
-  box-sizing: border-box;
-  max-width: 36px;
-  max-height: 36px;
+  min-width: max-content;
 
-  vertical-align: middle;
+  &Wrapper {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: start;
+    padding-right: 28px;
+  }
 
-  background-color: var(--color-dark-900);
-  border-radius: 100%;
-}
+  &Name {
+    border-bottom: 1px dashed white;
+  }
 
-.AvatarFallback {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  &Email {
+    font-size: var(--font-size-xs);
+    line-height: var(--line-height-s);
+    color: var(--color-dark-100);
+  }
 
-  width: 100%;
-  height: 100%;
-  padding: 2px;
+  &Image {
+    cursor: pointer;
 
-  font-size: 15px;
-  font-weight: 500;
-  line-height: 1;
+    width: 100%;
+    height: 100%;
+
+    object-fit: cover;
+    border-radius: inherit;
+  }
+
+  &Root {
+    overflow: hidden;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+
+    box-sizing: border-box;
+    max-width: 36px;
+    max-height: 36px;
+
+    vertical-align: middle;
+
+    background-color: var(--color-dark-900);
+    border-radius: 100%;
+  }
+
+  &Fallback {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 100%;
+    height: 100%;
+    padding: 2px;
+
+    font-size: 15px;
+    font-weight: 500;
+    line-height: 1;
+  }
 }
