--- a/src/components/ui/checkbox/checkbox.module.scss
+++ b/src/components/ui/checkbox/checkbox.module.scss
@@ -1,23 +1,14 @@
 .Checkbox {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  width: 36px;
-  height: 36px;
-  padding: 0;
-
-  background-color: white;
-  border-radius: 100%;
+  display: inline-flex;
+  box-sizing: border-box;
 
   &Root {
     box-sizing: border-box;
-    width: 18px;
-    height: 18px;
+    width: 36px;
+    height: 36px;
     padding: 0;
 
-    background-color: inherit;
-    border: 2px solid var(--color-light-900);
+    border: transparent;
   }
 }
 
