--- a/src/components/ui/pagination/pagination.module.scss
+++ b/src/components/ui/pagination/pagination.module.scss
@@ -1,19 +1,29 @@
 .paginationContainer {
   display: flex;
+  gap: 12px;
   align-items: center;
   justify-content: center;
-  padding: 10px;
-  background-color: #000;
-  color: #fff;
+
+  box-sizing: border-box;
+
+  color: var(--color-light-100);
+
+  background-color: var(--color-dark-900);
 }
 
 .pageButton {
-  margin: 0 5px;
-  padding: 5px 10px;
-  border: 1px solid #444;
-  background-color: #222;
-  color: #fff;
   cursor: pointer;
+
+  box-sizing: border-box;
+  height: 24px;
+  padding: 0 8px;
+
+  color: var(--color-light-100);
+
+  background-color: var(--color-dark-900);
+  border: none;
+  border-radius: 2px;
+
   transition:
     background-color 0.3s,
     color 0.3s,
@@ -24,33 +34,39 @@
     opacity: 0.5;
   }
 
-  &:hover:not(:disabled) {
+  &:hover {
     background-color: #333;
   }
 
   &.active {
-    background-color: #fff;
-    color: #000;
-    border: 1px solid #fff;
+    color: var(--color-dark-900);
+    background-color: var(--color-light-100);
+    border: 1px solid var(--color-light-100);
   }
 }
 
 .ellipsis {
-  margin: 0 5px;
-  padding: 5px 10px;
+  //padding: 5px 10px;
+  background-color: var(--color-dark-900);
+  border: none;
+  border-radius: 2px;
 }
 
 .itemsPerPage {
   display: flex;
   align-items: center;
-  margin-left: 20px;
 
   select {
-    margin: 0 5px;
-    padding: 5px;
-    background-color: #222;
-    color: #fff;
-    border: 1px solid #444;
     cursor: pointer;
+
+    box-sizing: border-box;
+    min-height: 24px;
+    padding: 0 2px 0 6px;
+
+    color: var(--color-light-100);
+
+    background-color: var(--color-dark-700);
+    border: 1px solid var(--color-dark-500);
+    border-radius: 2px;
   }
 }
