--- a/src/components/ui/detailCard/detailCard.module.scss
+++ b/src/components/ui/detailCard/detailCard.module.scss
@@ -1,8 +1,6 @@
 .card {
   display: inline-flex;
-}
-
-.r {
-  display: flex;
   flex-direction: column;
+  gap: 20px;
+  padding: 20px 20px 15px;
 }
