--- a/src/components/ui/header/header.module.scss
+++ b/src/components/ui/header/header.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   box-sizing: border-box;
-  background-color: var(--color-dark-900);
+  height: 60px;
 
   &__wrapper {
     display: flex;
@@ -11,11 +11,12 @@
 
     width: 100%;
     max-width: 1280px;
-    padding: 12px 136px;
+    padding: 0 136px;
+
+    background-color: var(--color-dark-700);
   }
 
   &__logo {
     display: flex;
-
   }
 }
