--- a/src/components/ui/input/input.module.scss
+++ b/src/components/ui/input/input.module.scss
@@ -1,9 +1,19 @@
 .input {
   width: 100%;
   height: 100%;
-  background-color: inherit;
+  background-color: transparent;
 
-  &__wrapper {
+  &Icon {
+    display: inline-flex;
+  }
+
+  &Container {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--color-dark-700);
+  }
+
+  &Wrapper {
     display: inline-flex;
     align-items: center;
 
@@ -17,7 +27,7 @@
     border-radius: 2px;
 
     &:focus-within {
-      background-color: var(--color-dark-900);
+      background-color: var(--color-dark-700);
       border-color: var(--color-info-700);
     }
 
@@ -27,11 +37,10 @@
     }
 
     &:active {
-      background-color: var(--color-dark-900);
+      background-color: var(--color-dark-700);
       border-color: var(--color-light-100);
     }
   }
-
 }
 
 .disablet {
@@ -46,4 +55,12 @@
 
   border: 1px solid var(--color-dark-300);
   border-radius: 2px;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus {
+  box-shadow: 0 0 0 1000px var(--color-dark-700) inset;
+
+  -webkit-text-fill-color: var(--color-light-100);
 }
